feat(optimizer): add professional SLF4J logging to Tier 3 catch blocks
Incorporated senior developer feedback: added SLF4J debug logging to AST mutation catch blocks in Tier 3 to prevent swallowing exceptions and improve engine debuggability without crashing the thread.